Making good progress on 2025_09_21